objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <description>Represents an agreement in the system</description>
    <fields>
        <fullName>APTPS_Account_Sites2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For customer #2</description>
        <label>Select customer signing entity address2</label>
        <referenceTo>Account_Sites__c</referenceTo>
        <relationshipLabel>Agreements (Select customer signing entity address2)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Account_Sites3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For customer #3</description>
        <label>Select customer signing entity address3</label>
        <referenceTo>Account_Sites__c</referenceTo>
        <relationshipLabel>Agreements (Select customer signing entity address3)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Account_Sites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select customer signing entity address</label>
        <referenceTo>Account_Sites__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Agreement_License_Terms__c</fullName>
        <formula>Apttus__Contract_End_Date__c - Apttus__Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement License Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTPS_Agreement_Nature__c</fullName>
        <label>Agreement Nature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Agreement_Title__c</fullName>
        <label>Agreement Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DTLA</fullName>
                </value>
                <value>
                    <fullName>BSLA</fullName>
                </value>
                <value>
                    <fullName>BSA</fullName>
                </value>
                <value>
                    <fullName>FTLA</fullName>
                </value>
                <value>
                    <fullName>JFTA</fullName>
                </value>
                <value>
                    <fullName>LOAN_PL</fullName>
                </value>
                <value>
                    <fullName>PLA</fullName>
                </value>
                <value>
                    <fullName>PLMA</fullName>
                </value>
                <value>
                    <fullName>QC</fullName>
                </value>
                <value>
                    <fullName>SLMA</fullName>
                </value>
                <value>
                    <fullName>SPLA</fullName>
                </value>
                <value>
                    <fullName>SPUA</fullName>
                </value>
                <value>
                    <fullName>SUMA</fullName>
                </value>
                <value>
                    <fullName>VPA</fullName>
                </value>
                <value>
                    <fullName>UNIV</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>MCCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Approval_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>Approval_Hierarchy__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Beta_Software_Support_Option__c</fullName>
        <label>Beta Software Support Option</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beta Test Plan</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Telephone Support</fullName>
                </value>
                <value>
                    <fullName>Error Resolution</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Approval_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Approval_Marketing_Alliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Marketing Alliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Approval_Software_Sales_Finan__c</fullName>
        <label>Approval Software Sales Finance Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Approval_Software_Sales_Messa__c</fullName>
        <label>Approval Software Sales Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Beta_Approver_Emails__c</fullName>
        <label>Beta Approver Emails</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Beta_Approver__c</fullName>
        <label>Beta Approver</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Cadence_Entity__c</fullName>
        <label>Cadence Entity (CLLA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Disable_Generate_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Generate Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Fully_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Installation_Support_Duration__c</fullName>
        <label>Installation Support Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Is_it_a_Beta_request__c</fullName>
        <label>Is it a Beta request?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>New Document</fullName>
                </value>
                <value>
                    <fullName>Only Adding CDNS Employees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Notice_Price_Book_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice Price Book Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Notice_Price_Book_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice Price Book Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Notice_Royalty_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice Royalty Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Notice_Third_Party_Arrangemen__c</fullName>
        <label>Notice Third Party Arrangement</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Notice_Third_Party_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice Third Party Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Notice_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Parent_Account_Name__c</fullName>
        <description>Field to hold Parent Account Name</description>
        <label>CLLA Parent Account Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Product_Origin_Text__c</fullName>
        <description>Store Product Origin</description>
        <label>CLLA Product Origin Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Requesters_Rep_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLLA Requester&apos;s Reporting Line VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_ReqRepVP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Requires_Beta_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Beta Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Requires_Non_WFO_Sales_Financ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Non WFO Sales Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_SW_Loan_Purpose_Guidance__c</fullName>
        <label>SW Loan Purpose Guidance</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_SW_Loan_Purpose__c</fullName>
        <label>SW Loan Purpose</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Signatory_Title__c</fullName>
        <label>Signatory Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Signatory__c</fullName>
        <label>Signatory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Cancel_Approvals__c</fullName>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;)), 
NOT(ISPICKVAL(Apttus__Status__c,&quot;Cancelled Request&quot;)|| ISPICKVAL(Apttus__Status__c,&quot;Fully Signed&quot;)||ISPICKVAL( APTPS_Order_Fulfillment_Completed__c ,&quot;Completed&quot;)||ISPICKVAL( APTPS_Order_Fulfillment_Completed__c ,&quot;Sent to eDA on Tap&quot;))), HYPERLINK(&quot;/apex/Apttus_Cancel_Request?id=&quot; &amp;Id&amp;&quot;&amp;operation=cancelApprovals&quot;, IMAGE(&quot;/resource/Cancel_Approvals&quot;, &quot;Cancel Approvals&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Approvals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Customer_signing_entity_address__c</fullName>
        <label>Customer signing entity address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_DIP_customer_engineer_email__c</fullName>
        <label>Customer Engineer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_DIP_customer_legal_contact_email__c</fullName>
        <label>Customer Legal Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_DIP_released_type__c</fullName>
        <label>DIP Product released type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released Product</fullName>
                </value>
                <value>
                    <fullName>Pre-release Product</fullName>
                </value>
                <value>
                    <fullName>Customer Special Deliverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Delivery_Of_Source_Code__c</fullName>
        <label>Delivery of Source Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Detail_of_Other_Purpose__c</fullName>
        <label>Enter the details of the Other Purpose</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Details_of_Assistance__c</fullName>
        <description>Enter the details of the assistance required here for the question in above test case</description>
        <inlineHelpText>Enter the details of the assistance required here for the question in above test case</inlineHelpText>
        <label>Details of Assistance</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for email notification</inlineHelpText>
        <label>Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Enter_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Enter_Duration_of_Support_in_weeks__c</fullName>
        <description>How many weeks will a Cadence support person be available to provide installation support following product delivery?</description>
        <inlineHelpText>How many weeks will a Cadence support person be available to provide installation support following product delivery?</inlineHelpText>
        <label>Enter Duration of Support (in weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTPS_Enter_Duration_of_Training_hours__c</fullName>
        <description>Duration of Training in hours if &quot;What will be the method of training?” Has &quot;At Licensee’s Designated Site&quot; selected</description>
        <label>Enter Duration of Training (in hours)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTPS_Enter_PO_number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Enter_Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email Addressess</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Export_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any product in the line items has the flag set, then this Export Restricted field to Yes. 
The Export_Restricted__c  field in the Product object needs to be checked.</description>
        <label>Export Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_FF_Activate_NDA__c</fullName>
        <formula>IF(ISPICKVAL( Apttus__Status__c ,&quot;fully signed&quot;),
HYPERLINK(&quot;/apex/AgreementActivateNew?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_FF_Activate__c</fullName>
        <formula>IF (ISPICKVAL(APTPS_Order_Fulfillment_Completed__c,&quot;Completed&quot;), HYPERLINK(&quot;/apex/Apttus__AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Generate__c</fullName>
        <formula>IF( AND(($Profile.Name!= &apos;4_4 - Legal&apos;),($Profile.Name!= &apos;4_4 - Legal_Apttus&apos;),($Profile.Name!= &apos;4_4 - Legal_ApttusClone&apos;),($Profile.Name!= &apos;4_4 - LegalApttus&apos;),($Profile.Name!= &apos;4_4 - LegalApttusClone&apos;))&amp;&amp;(APTPS_CLLA_Disable_Generate_Button__c==false)&amp;&amp;(
AND((ISPICKVAL( Apttus_Approval__Approval_Status__c,&apos;Approved&apos;)),ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;))) , HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),

IF( OR(($Profile.Name== &apos;4_4 - Legal&apos;),($Profile.Name== &apos;4_4 - Legal_Apttus&apos;),($Profile.Name== &apos;4_4 - Legal_ApttusClone&apos;),($Profile.Name== &apos;4_4 - LegalApttus&apos;),($Profile.Name== &apos;4_4 - LegalApttusClone&apos;))&amp;&amp;(APTPS_CLLA_Disable_Generate_Button__c==false) &amp;&amp;(
AND((ISPICKVAL( Apttus_Approval__Approval_Status__c,&apos;Approved&apos;)),ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;))),HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),
null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Has_customer_previously_loaned__c</fullName>
        <description>Has the customer previously been loaned these products?</description>
        <inlineHelpText>Has the customer previously been loaned these products?</inlineHelpText>
        <label>Customer Previously Loaned Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Host_ID__c</fullName>
        <label>Host ID</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_IP_Product_Origin__c</fullName>
        <label>IP Product Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interface IP (DIP)</fullName>
                </value>
                <value>
                    <fullName>Processor IP (Tensilica)</fullName>
                </value>
                <value>
                    <fullName>Soft Core</fullName>
                </value>
                <value>
                    <fullName>Hard Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_IS_Patent_Application__c</fullName>
        <label>Patent Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_IS_Production_Use__c</fullName>
        <description>CLLA-Check if the licenses are for production use</description>
        <inlineHelpText>Check if the licenses are for production use</inlineHelpText>
        <label>Production / Non-Production</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Non-Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Identify_business_purpose_of_loan__c</fullName>
        <description>Identify the business purpose of this loan</description>
        <inlineHelpText>Identify the business purpose of this loan</inlineHelpText>
        <label>Identify business purpose of this loan</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_IsCLLAMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCLLAMaster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Is_this_a_loan_extension__c</fullName>
        <label>Loan Extension</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_License_Fulfillment_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Fulfillment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_License_Fulfillment_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_License_Request_Type__c</fullName>
        <description>CLLA-Select License Request Type</description>
        <inlineHelpText>Select License Request Type</inlineHelpText>
        <label>License Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>APTPS_Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>WFO</fullName>
                </value>
                <value>
                    <fullName>Non-WFO</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_License_file__c</fullName>
        <inlineHelpText>&quot;Please confirm the email address is accurate. This should contain an &apos;@&apos; and &apos;.&apos;. The format should be as the below example: 

example@acme.com&quot;</inlineHelpText>
        <label>License file delivered to VAR contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Master_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If yes, select correct Agreement Number</inlineHelpText>
        <label>Existing Agreement Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Legacy Agreement Numbers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (If yes, Select correct Agreement Number)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Method_of_Cadence_support__c</fullName>
        <description>The method by which training will be delivered.</description>
        <inlineHelpText>Method by which Cadence support person will be available</inlineHelpText>
        <label>Cadence Support Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>On-site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_More_Than_180_Days__c</fullName>
        <label>Loaned Products &gt; 180 days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_NA_Canada_approval_is_mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>2. For North America and Canada, Director level approval is required for customer’s signature. For outside of North America and Canada, senior manager or director level approval is required for customer’s signature.</inlineHelpText>
        <label>For NA and Canada approval is mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Continuing_Obligation__c</fullName>
        <description>Obligation End Date</description>
        <label>Continuing Obligation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Is_Legacy_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this will address all the Legacy NDA</inlineHelpText>
        <label>Is Legacy NDA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Purpose__c</fullName>
        <label>NDA Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Send_for_Signature__c</fullName>
        <label>Send for Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Special_Legal_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you need Special Legal Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Taiwan_or_other_Asia_Pacific__c</fullName>
        <label>Is Country Taiwan or Other Asia Pacific</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Other Asia Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_NDA_Validate_Existing_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Not_Display_on_CLLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Legal super users to flag each &quot;alternative&quot; master agreement (e.g., SPLA/SPUA/BSLA/DTLA/BSA/PLA) for display on the CLLA system.  This needs to be really easy for the legal super user to switch on/off.  If the &quot;alternative&quot; master agreement is not displayed, then the requestor cannot use it for generating a license in the CLLA system.  The &quot;Not Display on CLLA&quot; flag (with tool tip to explain what it is) will be on the Agreement Details page.</description>
        <inlineHelpText>Allow Legal super users to flag each &quot;alternative&quot; master agreement (e.g., SPLA/SPUA/BSLA/DTLA/BSA/PLA) for display on the CLLA system.  This needs to be really easy for the legal super user to switch on/off.</inlineHelpText>
        <label>Not Display on CLLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Order_Fulfillment_Comments__c</fullName>
        <label>Order Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Order_Fulfillment_Completed__c</fullName>
        <label>Order Fulfillment Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>HW Checked</fullName>
                </value>
                <value>
                    <fullName>Sent to eDA on Tap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Parent_Account_Type__c</fullName>
        <label>Parent Account Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements at Parent Account Level</relationshipLabel>
        <relationshipName>Agreements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_Please_acknowledge_Non_WFO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-WFO acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Product_Origin__c</fullName>
        <label>Product Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOCR</fullName>
                </value>
                <value>
                    <fullName>Tensilica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Product_Sub_Type__c</fullName>
        <description>CLLA-Select agreement type</description>
        <inlineHelpText>Select agreement type</inlineHelpText>
        <label>Product Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>APTPS_Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Booked Demo</fullName>
                </value>
                <value>
                    <fullName>Loaner</fullName>
                </value>
                <value>
                    <fullName>Marketing Demo</fullName>
                </value>
                <value>
                    <fullName>Pre-Sale Eval</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Demo</fullName>
                </value>
                <value>
                    <fullName>Sales Office &amp; Support Demo</fullName>
                </value>
                <value>
                    <fullName>Beta(Verification Acceleration Products)</fullName>
                </value>
                <value>
                    <fullName>Temp Key</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Product_Type__c</fullName>
        <description>CLLA - Select product being licensed to customer</description>
        <inlineHelpText>Select product being licensed to customer</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Design IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>